# smart-provider

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml
.opencode/: opencode.json
.opencode/commands/: git-commit.md
docs/: config-module.md  configuration.md  ingress.md  quickstart.md
openspec/: config.yaml
openspec/changes/implement-ingress-litellm/: design.md  proposal.md
openspec/changes/smart-provider-architecture-design/: design.md  tasks.md
openspec/changes/smart-provider-implementation-guide/: proposal.md  tasks.md
openspec/specs/circuit-breaker/: spec.md
openspec/specs/client-request-adaptation/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/configuration-docs/: spec.md
openspec/specs/graceful-shutdown/: spec.md
openspec/specs/health-checks/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/prometheus-metrics/: spec.md
src/: __init__.py  processor.py  shutdown.py
src/circuit_breaker/: __init__.py  circuit_breaker.py
src/config/: __init__.py  config.py  loader.py  schema.py
src/forwarder/: __init__.py  forwarder.py
src/ingress/: __init__.py  app.py  context.py  models.py  stream_handle.py
src/ingress/adapters/: openai.py
src/limiter/: __init__.py  rate_limiter.py
src/observability/: __init__.py  metrics.py
src/queue/: __init__.py  queue.py
tests/: conftest.py  test_circuit_breaker.py  test_concurrency.py  test_config.py  test_forwarder.py  test_ingress.py  test_ingress_adapters.py  test_limiter.py  test_observability.py  test_processor.py  test_queue.py  test_stream_handle.py
(+127 files in other folders)
